--- a/react-deploy/public/index.html
+++ b/react-deploy/public/index.html
@@ -2,13 +2,37 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="%PUBLIC_URL%/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="%PUBLIC_URL%/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="%PUBLIC_URL%/favicon-16x16.png"
+    />
     <!-- <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" /> -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0,  minimum-scale=1.0">  
-    <meta name="theme-color" content="#000000" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0,  minimum-scale=1.0"
+    />
+    <meta name="theme-color" content="#27292a" />
+    <meta property="og:title" content="anya-ji" />
+
+    <meta property="og:image" content="%PUBLIC_URL%/head.jpg" />
+
+    <meta property="og:description" content="Personal Website of Anya Ji" />
+
+    <meta property="og:url" content="https://anya-ji.github.io/" />
     <!-- <meta
       name="description"
       content="Web site created using create-react-app"
