--- a/react-deploy/public/index.html
+++ b/react-deploy/public/index.html
@@ -33,6 +33,8 @@
     <meta property="og:description" content="Personal Website of Anya Ji" />
 
     <meta property="og:url" content="https://anya-ji.github.io/" />
+    <meta property="og:url" content="https://anya-ji.github.io/compsci" />
+    <meta property="og:url" content="https://anya-ji.github.io/psych" />
     <!-- <meta
       name="description"
       content="Web site created using create-react-app"
