--- a/react-deploy/public/index.html
+++ b/react-deploy/public/index.html
@@ -26,15 +26,15 @@
       content="width=device-width, initial-scale=1.0,  minimum-scale=1.0"
     />
     <meta name="theme-color" content="#27292a" />
-    <meta property="og:title" content="anya-ji" />
+    <meta property="og:title" content="narjes-alzahli" />
 
     <meta property="og:image" content="%PUBLIC_URL%/head.jpg" />
 
-    <meta property="og:description" content="Personal Website of Anya Ji" />
+    <meta property="og:description" content="Personal Website of Narjes Al-Zahli" />
 
-    <meta property="og:url" content="https://anya-ji.github.io/" />
-    <meta property="og:url" content="https://anya-ji.github.io/compsci" />
-    <meta property="og:url" content="https://anya-ji.github.io/psych" />
+    <meta property="og:url" content="https://narjes-alzahli.github.io/" />
+    <meta property="og:url" content="https://narjes-alzahli.github.io/compsci" />
+    <meta property="og:url" content="https://narjes-alzahli.github.io/psych" />
     <!-- <meta
       name="description"
       content="Web site created using create-react-app"
@@ -54,7 +54,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>anya-ji</title>
+    <title>narjes-alzahli</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
